--- a/style.css
+++ b/style.css
@@ -7,48 +7,48 @@
 */
 
 * {
-  margin: 0px;
-  padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 body {
-  background-color: rgb(24, 24, 24);
-  height: 100%;
-  width: 100%;
+    background-color: rgb(24, 24, 24);
+    height: 100%;
+    width: 100%;
 }
 
 header {
-  font-weight: bold;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode";
-  text-align: center;
-  position: relative;
-  top: 0px;
-  height: 48px;
-  font-size: 36px;
-  color: #ffffff;
-  background-color: #082049;
-  border-bottom: #5173a5;
-  border-bottom-style: solid;
+    font-weight: bold;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode";
+    text-align: center;
+    position: relative;
+    top: 0px;
+    height: 48px;
+    font-size: 36px;
+    color: #ffffff;
+    background-color: #082049;
+    border-bottom: #5173a5;
+    border-bottom-style: solid;
 }
 
 h1 {
-  font-size: 64px;
+    font-size: 64px;
 }
 
 h2 {
-  font-size: 56px;
+    font-size: 56px;
 }
 
 h3 {
-  font-size: 48px;
+    font-size: 48px;
 }
 
 h4 {
-  font-size: 32px;
+    font-size: 32px;
 }
 
 h5 {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 h1,
@@ -57,204 +57,234 @@ h3,
 h4,
 h5,
 h6 {
-  color: #e48b47;
-  font-weight: bolder;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode";
-  padding-left: 16px;
-  padding-top: 32px;
+    color: #e48b47;
+    font-weight: bolder;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode";
+    padding-left: 16px;
+    padding-top: 32px;
 }
 
 footer {
-  text-align: center;
-  background-color: rgb(24, 24, 24);
-  color: #ebebeb;
-  padding: 8px;
-  font-size: 16px;
-  clear: both;
-  position: relative;
-  z-index: 10;
-  height: 3em;
+    text-align: center;
+    background-color: rgb(24, 24, 24);
+    color: #ebebeb;
+    padding: 8px;
+    font-size: 16px;
+    clear: both;
+    position: relative;
+    z-index: 10;
+    height: 3em;
 }
 
 aside {
-  float: right;
-  padding: 8px;
-  margin: 32px;
-  background-color: #ebebeb;
-  color: #082049;
+    float: right;
+    padding: 8px;
+    margin: 32px;
+    background-color: #ebebeb;
+    color: #082049;
 }
 
 img {
-  margin: 16px;
-  display: block;
-  border: #a4251a;
-  border-style: solid;
-  border-width: 2px;
-  object-fit: fill;
+    margin: 16px;
+    display: block;
+    border: #a4251a;
+    border-style: solid;
+    border-width: 2px;
+    object-fit: fill;
 }
 
 p {
-  border: #082049;
-  color: #ffffff;
-  padding-left: 32px;
-  padding-right: 32px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  font-family: "Agency FB";
+    border: #082049;
+    color: #ffffff;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    font-family: "Agency FB";
 }
 
 label {
-  border: #082049;
-  color: #ffffff;
-  padding-left: 32px;
-  padding-right: 32px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  font-family: "Agency FB";
+    border: #082049;
+    color: #ffffff;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    font-family: "Agency FB";
 }
 
 a {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode";
+    font-family: "Trebuchet MS", "Lucida Sans Unicode";
 }
 
 a:link {
-  /* unvisited link */
-  color: #e48b47;
+    /* unvisited link */
+    color: #e48b47;
 }
 
 a:active {
-  /* selected link */
-  color: #a4251a;
+    /* selected link */
+    color: #a4251a;
 }
 
 a:visited {
-  /* visited link */
-  color: #ebebeb;
+    /* visited link */
+    color: #ebebeb;
 }
 
 a:hover {
-  /* mouse over link */
-  color: #e16628;
+    /* mouse over link */
+    color: #e16628;
 }
 
 ul {
-  list-style-type: none;
-  margin: 0px;
-  padding: 0px;
-  position: relative;
-  top: 0px;
-  height: 28px;
-  width: 100%;
-  overflow: auto;
-  background-color: #333;
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    position: relative;
+    top: 0px;
+    height: 28px;
+    width: 100%;
+    overflow: auto;
+    background-color: #333;
 }
 
 li {
-  border-right: 1px solid #bbb;
-  display: inline-block;
+    border-right: 1px solid #bbb;
+    display: inline-block;
 }
 
 li a {
-  display: block;
-  text-align: center;
-  font-weight: bold;
-  padding: 4px 20px;
-  text-decoration: none;
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    padding: 4px 20px;
+    text-decoration: none;
 }
+
 
 /* Change the link color to #111 (black) on hover */
+
 li a:hover {
-  background-color: #111;
+    background-color: #111;
 }
 
+
 /* classes */
+
 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .side_nav li ul {
-  margin-left: auto;
+    margin-left: auto;
 }
 
 .rounded-corners {
-  border-radius: 30px;
+    border-radius: 30px;
 }
 
 .active {
-  background-color: #e16628;
+    background-color: #e16628;
 }
 
 .image_container {
-  position: relative;
-  text-align: center;
-  color: white;
+    position: relative;
+    text-align: center;
+    color: white;
 }
 
 .box {
-  position: relative;
-  display: inline-block; /* Make the width of box same as image */
+    position: relative;
+    display: inline-block;
+    /* Make the width of box same as image */
 }
 
 .box .box_text {
-  position: absolute;
-  z-index: 999;
-  margin: 0 auto;
-  left: 0px;
-  right: 0px;
-  text-align: center;
-  top: 33%;
-  background: rgba(0, 0, 0, 0.8);
-  font-family: "Trebuchet MS", "Lucida Sans Unicode";
-  color: #fff;
-  width: 50%; /* Set the width of the positioned div */
+    position: absolute;
+    z-index: 999;
+    margin: 0 auto;
+    left: 0px;
+    right: 0px;
+    text-align: center;
+    top: 33%;
+    background: rgba(0, 0, 0, 0.8);
+    font-family: "Trebuchet MS", "Lucida Sans Unicode";
+    color: #fff;
+    width: 50%;
+    /* Set the width of the positioned div */
 }
 
+
 /* ids */
+
 #container {
-  display: flex;
-  width: 100%;
-  overflow: hidden;
+    display: flex;
+    width: 100%;
+    overflow: hidden;
 }
 
 #main_content {
-  background-color: rgb(24, 24, 24);
-  border: #5173a5;
-  border-style: solid;
-  font-size: 20px;
-  color: #092149;
-  width: 80%;
+    background-color: rgb(24, 24, 24);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: #5173a5;
+    border-style: solid;
+    font-size: 20px;
+    color: #092149;
+    width: 80%;
 }
 
 #sidebar_right {
-  float: left;
-  font-size: 16px;
-  width: 10%;
-  border: #5173a5;
-  border-bottom: #111;
-  border-bottom-style: solid;
+    float: left;
+    font-size: 16px;
+    width: 10%;
+    border: #5173a5;
+    border-bottom: #111;
+    border-bottom-style: solid;
 }
 
 #sidebar_left {
-  float: left;
-  font-size: 16px;
-  width: 10%;
-  border: #5173a5;
-  border-bottom: #111;
-  border-bottom-style: solid;
+    float: left;
+    font-size: 16px;
+    width: 10%;
+    border: #5173a5;
+    border-bottom: #111;
+    border-bottom-style: solid;
 }
 
 #submit_button {
-  background: #082049;
-  color: #ffffff;
-  font-size: 24px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode";
-  padding: 10px 10px 10px 10px;
-  margin-bottom: 10px;
+    background: #082049;
+    color: #ffffff;
+    font-size: 24px;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode";
+    padding: 10px 10px 10px 10px;
+    margin-bottom: 10px;
+}
+
+#new_ellipse_button {
+    background: #082049;
+    color: #ffffff;
+    font-size: 20px;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode";
+    padding: 10px 10px 10px 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;;
+    font-weight: bolder;
+    border-radius: 20px;
 }
 
 #instructions {
-  font-size: 24px;
+    font-size: 24px;
+}
+
+#ellipse {
+    border: #333;
+    border-style: solid;
+    background: #222222;
+    border-radius: 30px;
+    
 }
