--- a/style.css
+++ b/style.css
@@ -224,13 +224,14 @@ li a:hover {
 #container {
     display: flex;
     width: 100%;
-    overflow: hidden;
 }
 
 #main_content {
     background-color: rgb(24, 24, 24);
     margin-top: 20px;
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
     border: #5173a5;
     border-style: solid;
     font-size: 20px;
@@ -239,9 +240,11 @@ li a:hover {
 }
 
 #sidebar_right {
-    float: left;
+    float: right;
     font-size: 16px;
-    width: 10%;
+    width: 160px;
+    height: 100%;
+    padding-top: 20px;
     border: #5173a5;
     border-bottom: #111;
     border-bottom-style: solid;
@@ -250,7 +253,11 @@ li a:hover {
 #sidebar_left {
     float: left;
     font-size: 16px;
-    width: 10%;
+    z-index: 1;
+    padding-top: 20px;
+    width: 160px;
+    overflow-x: hidden;
+    height: 100%;
     border: #5173a5;
     border-bottom: #111;
     border-bottom-style: solid;
@@ -286,5 +293,6 @@ li a:hover {
     border-style: solid;
     background: #222222;
     border-radius: 30px;
+    overflow: auto;
     
 }
