Fixed comments and some code formatting

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 *   Name:       Kyle Mayer
-*   File:       index.html
+*   File:       style.css
 *   Program:    Program 2
 *   Purpose:    Design a web page that can pass parameters between html pages to draw an ellipse
-*   Date:       9/10/2019
+*   Date:       9/15/2019
 */
 
 * {
